# tools

./: .gitignore  README.md  pyproject.toml  test_sample.txt
.clinerules/: guidelines.md  memory-bank.md
cli/: pyproject.toml
cli/cli/: main.py
common/: pyproject.toml
common/src/common/: audio.py  config.py  embeddings.py  llm.py  logging.py  telegram.py
common/tests/: test_audio.py  test_llm.py
memory-bank/: productContext.md  projectbrief.md  systemPatterns.md  techContext.md
newsletter/: README.md  pyproject.toml
newsletter/src/newsletter/: __init__.py  audio.py  clients.py  config.py  db.py  digest.py  fetcher.py  main.py  scraper.py  sources.py  summarizer.py  telegram.py
newsletter/tests/: __init__.py
tests/: __init__.py
tts/: pyproject.toml
tts/src/tts/: __init__.py  cli.py
tts/tests/: __init__.py
writer/: DESIGN.md  pyproject.toml
writer/guidelines/: reviewer.md  writer.md
writer/knowledge/: bigquery.md  kafka.md
writer/src/writer/: __init__.py  cli.py  feedback_loop.py  indexer.py  reviewer_agent.py  writer_agent.py
writer/tests/: __init__.py  test_cli.py  test_feedback_loop.py  test_reviewer_agent.py  test_writer_agent.py
