[project]
name = "mytools-cli"
version = "0.1.0"
description = "Meta CLI for aggregating all tools"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
dependencies = ["common", "newsletter", "writer", "tts", "typer>=0.9.0"]

[project.scripts]
mytools = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
