[project]
name = "newsletter"
version = "0.1.0"
description = "Daily tech newsletter fetcher, summarizer, and audio generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "click>=8.1.8",
    "feedparser>=6.0.12",
    "common>=0.1.0",
    "transformers>=4.57.0",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydub>=0.25.0",
    "datasets>=2.0.0",
    "sentencepiece>=0.2.0",
    "gtts>=2.5.0",
    "tenacity>=8.0.0",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
]

[project.scripts]
newsletter = "newsletter.main:main"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
