[project]
name = "tts"
version = "0.1.0"
description = "Text-to-Audio Converter using Hugging Face TTS"
requires-python = ">=3.12"
dependencies = [
    "common>=0.1.0",
    "typer>=0.9.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydub>=0.25.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
tts = "tts.cli:main"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
torch = { index = "pytorch-cuda" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
